--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -146,7 +146,7 @@ h6 {
 
 .grey-btn:active,
 .grey-btn:hover {
-    background-color: #ff817e;
+    background-color: #ff817e !important;
     color: #fff;
 }
 
